|		* Check, if 2 php.ini-files are allowed and working  |
|		* apache: check if stats are working with FastCGI    |
|	- AWStats:                                               |
|		* apache: set statsdir if awstats is enabled         |
|		* gui: disable stats-alias in client menu            |
\____________________________________________________________/

2007-01-19 Benedikt Heintel
	- LANGUAGES:
		* Danish:			Added missing translations
	- GUI:
		* ./include/adodb/
			update:			Version 4.93a
		* ./tools/filemanager/login.php
			fixed:			Bug #439 (vhcs.net)
		* ./tools/pma/
			update:			Version 2.9.2

2007-01-18 Pieter Verhaeghe
	- LANGUAGES:
		* Dutch:			Added missing translations

2007-01-18 Benedikt Heintel
	- SETUP:
		* ./vhcs2-setup
			fixed:			Installation error

2007-01-17 Benedikt Heintel
	- DOCS:
		* ./INSTALL
			changed:		Deleted double word
	- LANGUAGES:
		* English:			Changed translations
	- SETUP:
		* ./vhcs2-setup

2007-01-16 Benedikt Heintel
	- ENGINE:
		* ./backup/vhcs2-backup-all
			changed:		Extension of the backup files to bz2

2007-01-15 Benedikt Heintel
	- ENGINE:
		* ./backup/vhcs2-backup-all
			fixed bug #20:	Backup working with tar 1.16
		* ./backup/vhcs2-bk-tasks
			fixed bug #20:	Backup working with tar 1.16
		* ./vhcs-dmn-mngr
			fixed bug #20:	Backup working with tar 1.16
	- GUI:
		* ./client/error_pages.php
			fixed bug #19:	html tags not allowed

2007-01-12 Benedikt Heintel
	- GUI:
		* Updated PHPmyAdmin to 2.9.2-rc1

2007-01-11 Benedikt Heintel
	- LANGUAGES:
		* Changed Strings to VHCS2.4.8

2007-01-09 Benedikt Heintel
	- LANGUAGES:
		* Added Danish language file
		* Added French language file
		* Added Magyar language file
		* Added Thai language file
		* Changed Italian language file

2006-12-22 Benedikt Heintel
	- MAKEFILE:
		* Added FastCGI Makefile
		* Changed FastCGI Makefile
	- SETUP:
		* Fixed Warnings

2006-12-19 Benedikt Heintel
	- SETUP:
		* Fixed Errors

2006-12-15 Benedikt Heintel
	- MAKEFILE:
		* Fixed Errors
	- SETUP: