@@ -1,0 +1,79 @@
+apr
+apr-util
+bash
+bzip2
+c-client
+courier-imap
+courier-pop3
+courier-utils
+curl
+cyrus-sasl
+db-4.2.52p8
+expat
+freetype
+gdbm
+gettext
+gmp
+jpeg-6bp3
+libghttp
+libiconv
+libltdl
+libmcrypt
+libxml
+mhash
+mtr-0.71-no_x11
+mysql-client
+mysql-server
+neon
+p5-Compress-Zlib
+p5-Crypt-Blowfish
+p5-Crypt-CBC
+p5-Crypt-DES
+p5-Crypt-SSLeay
+p5-DBD-mysql
+p5-DBI
+p5-Digest-HMAC
+p5-Digest-SHA1
+p5-HTML-Parser
+p5-HTML-Tagset
+p5-HTTP-GHTTP
+p5-IO-stringy
+p5-MIME-tools
+p5-Mail-SpamAssassin
+p5-Mail-Tools
+p5-Net-DNS
+p5-Net-Daemon
+p5-Net-IP
+p5-PlRPC
+p5-URI
+p5-libwww
+pcre
+pdflib
+php4-bz2
+php4-core
+php4-curl
+php4-dbx
+php4-domxml
+php4-extensions
+php4-filepro
+php4-gd-4.4.1p4-no_x11
+php4-gmp
+php4-imap
+php4-mcrypt
+php4-mhash
+php4-mysql
+php4-pdf
+php4-pear
+php4-shmop
+php4-xmlrpc
+php4-xslt
+png
+postfix-2.3.2-sasl2
+recode
+sablotron
+subversion
+t1lib
+tiff
+unzip
+vim-7.0.42-no_x11
+wget
