@@ -12,6 +12,15 @@ VHCS 2.4.8 ω Omega Changelog
 \____________________________________________________________/
 
 2007-01-19 Benedikt Heintel
+	- DOCS:
+		* ./openbsd_install_notes.txt
+			update:			look at it :)
+		* ./openbsd-packages-install40.sh
+			added
+		* ./openbsd-packages.txt
+			update:			removed new lines
+		* ./openbsd-packages40.txt
+			added
 	- LANGUAGES:
 		* Danish:			Added missing translations
 	- GUI:
